trying to speed up servers, both local and remote
